[package]
name = "sonder-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"


[dependencies.tokio]
version = "1.35.1"
features = [
    "macros",
    "rt-multi-thread"
]
