[package]
name = "sonder-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
dotenvy = "0.15.7"
env_logger = "0.11.0"
log = "0.4.20"
oauth2 = "4.4.2"
serde = "1.0.195"
time = "0.3.31"
toml = "0.8.8"
tower = "0.4.13"
tower-sessions = "0.9.1"

[dependencies.sqlx]
version = "0.7.3"
features = [
    "sqlite",
    "time",
    "runtime-tokio"
]

[dependencies.axum]
version = "0.7.4"
features = [
    "ws"
]

[dependencies.tokio]
version = "1.35.1"
features = [
    "macros",
    "rt-multi-thread"
]

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "spam"
path = "src/bin/spam.rs"
